# EggzClientUI

./: .gitignore  ClientPhysicsSocket.gdnlib  EntityManagement.gd  EntityManagement.tscn  TestSocket.tscn  WebsocketEggzClient.gd  \  ]  export_presets.cfg  native_tools.gdnlib  project.godot  run_local.sh  testscene.tscn
abilities/: AbilityAPI.gd
entity/: EntityConstants.gd  EntityFactory.gd  EntityManagement.gd  EntityManager.gd  EntityRoutingManagerClient.gd  EntityTerrainMapper.gd  PhysicalPlayerEntity.gd  PhysicalPlayerEntity.tscn  Player.gd  Player.tscn  ServerEntity.gd  ServerEntity.tscn
native_lib/: BeltOrbital.gdns  Cargo.toml  ClientPhysicsSocket.gdnlib  ClientPhysicsSocket.gdns  ClientPhysicsSocket.tscn  ClientTerminal.gdns  ClientTerminal.tscn  DamageDisplay.gdns  DamageIndicator.gdns  Field.gdns  FieldServer.gdns  InventoryMenu.gdns  Notifications.gdns  Pocket.gdns  ServerConsole.gdns  ServerStats.gdns  SharedRuntime.gdns  SharedRuntimeBytes.gdns  ShopMenu.gdns  Slizzard.gdns
native_lib/src/: button_tiles.rs  client_entity.rs  client_terminal.rs  collision_layer.rs  damage_indicator.rs  data_display.rs  data_graphs.rs  data_snapshots.rs  entity_flight_tail.rs  field.rs  field_abilities.rs  field_ability_actions.rs  field_ability_colliders.rs  field_ability_mesh.rs  field_server.rs  fps_counter.rs  item_menu.rs  lib.rs  navigation_point_mesh.rs  notifications.rs  server_console.rs  shop_menu.rs  slizzard.rs  socket_mode.rs  socket_stats.rs  terminal_actions.rs  terminal_commands.rs
native_lib/src/traits/: mod.rs
native_lib/src/ui_traits/: mod.rs
(+221 files in other folders)
